--- a/.vale.ini
+++ b/.vale.ini
@@ -1,8 +1,8 @@
 # This goes in a file named either `.vale.ini` or `_vale.ini`.
 MinAlertLevel = suggestion
 
-Packages = Microsoft, Readability, proselint, write-good, alex
+Packages = Readability, proselint, write-good, alex
 
 [*.{md,mdx,mjs}]
 # List of styles to load.
-BasedOnStyles = Microsoft, Readability, proselint, write-good, alex
+BasedOnStyles = Readability, proselint, write-good, alex
