--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'  # Limit to 50% of one CPU core
+          cpus: '0.5' # Limit to 50% of one CPU core
         reservations:
           cpus: '0.25' # Reserve 25% of one CPU core
 
@@ -67,9 +67,16 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'  # Limit to 100% of one CPU core
+          cpus: '1.0' # Limit to 100% of one CPU core
         reservations:
-          cpus: '0.5'  # Reserve 50% of one CPU core
+          cpus: '0.5' # Reserve 50% of one CPU core
+
+    # Health check configuration
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-postgres}']
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 volumes:
   postgres-data:
@@ -77,5 +84,5 @@ volumes:
     # Optimize volume for performance
     driver_opts:
       type: none
-      device: /path/to/your/data/directory  # Change this to your desired path
+      device: /path/to/your/data/directory # Change this to your desired path
       o: bind
