--- a/.htmlhintrc
+++ b/.htmlhintrc
@@ -1,28 +1,9 @@
 {
-    "ignore": [
-      "docs/.overrides/partials/copyright.html"
-    ],
-    "doctype-html5": true,
-    "doctype-first": true,
-    "tagname-lowercase": true,
-    "attr-lowercase": true,
-    "attr-value-double-quotes": true,
     "attr-value-not-empty": false,
-    "attr-no-duplication": true,
-    "tag-pair": true,
     "tag-self-close": false,
-    "spec-char-escape": true,
-    "id-unique": true,
-    "src-not-empty": true,
-    "title-require": true,
-    "alt-require": true,
-    "id-class-value": "dash",
     "style-disabled": false,
     "inline-style-disabled": false,
     "inline-script-disabled": false,
-    "space-tab-mixed-disabled": "space",
     "id-class-ad-disabled": false,
-    "href-abs-or-rel": false,
-    "attr-unsafe-chars": true,
-    "head-script-disabled": true
+    "href-abs-or-rel": false
   }
