--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -73,7 +73,7 @@ services:
 
     # Health check configuration
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-postgres}']
+      test: [CMD-SHELL, 'pg_isready -U ${POSTGRES_USER:-postgres}']
       interval: 30s
       timeout: 10s
       retries: 5
