--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,7 +1,6 @@
 ---
-# SPDX-FileCopyrightText: GitHub, Inc. and contributors
 # SPDX-License-Identifier: MIT
-
+# GitHub Dependency Security Review Workflow
 name: Dependency Security Review
 
 on: # yamlint disable-line rule:truthy
@@ -11,6 +10,7 @@ on: # yamlint disable-line rule:truthy
       - requirements*.txt
       - pyproject.toml
       - .github/workflows/dependency-review.yml
+      - .github/dependency-review-config.yml
 
 permissions:
   contents: read
@@ -31,20 +31,23 @@ jobs:
       security-events: write
 
     steps:
+      # Step 1: Harden Runner for Security
       - name: 🔒 Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        uses: step-security/harden-runner@v2.7.0
         with:
           egress-policy: audit
 
+      # Step 2: Checkout Code
       - name: 🧰 Checkout Repository
-        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
+        uses: actions/checkout@v4.1.5
         with:
           persist-credentials: false
           fetch-depth: 0
 
+      # Step 3: Dependency Review
       - name: 🔍 Review Dependencies
         id: reviewdeps
-        uses: actions/dependency-review-action@0c155c5e8556a497adf53f2c18edabf945ed8e70 # v4.3.2
+        uses: actions/dependency-review-action@v4.3.2
         with:
           comment-summary-in-pr: always
           fail-on-severity: moderate
@@ -56,18 +59,18 @@ jobs:
           retry-on-snapshot-warnings: true
           base-ref: ${{ github.event.pull_request.base.ref }}
           head-ref: ${{ github.event.pull_request.head.ref }}
-          config-file: .github/dependency-review-config.yml
+          config-file: .github/dependency-review-config.yml # Use external config if necessary
 
+      # Step 4: Generate Dependency Report
       - name: 📊 Generate Dependency Report
         if: always()
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7.0.1
         with:
           script: |
-            const review = steps.reviewdeps.outputs.result;
-
+            const review = JSON.parse(steps.reviewdeps.outputs.result || '{}');
             let report = '## 📋 Dependency Review Summary\n\n';
 
-            if (review.violations.length > 0) {
+            if (review.violations?.length > 0) {
               report += '### ⚠️ Violations Found\n\n';
               review.violations.forEach(v => {
                 report += `- **${v.severity}**: ${v.message}\n`;
@@ -76,7 +79,7 @@ jobs:
               report += '✅ No dependency violations found\n';
             }
 
-            if (review.licenses.denied.length > 0) {
+            if (review.licenses?.denied?.length > 0) {
               report += '\n### 🚫 Denied Licenses\n\n';
               review.licenses.denied.forEach(l => {
                 report += `- ${l.name} (${l.package})\n`;
@@ -90,16 +93,18 @@ jobs:
               body: report
             });
 
+      # Step 5: Add Labels Based on Results
       - name: 🏷️ Add Labels
         if: always()
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             const labels = [];
+            const review = JSON.parse(steps.reviewdeps.outputs.result || '{}');
 
-            if (needs.reviewdeps.result === 'failure') {
+            if (review.violations?.length > 0 || review.licenses?.denied?.length > 0) {
               labels.push('security-risk');
-              if (needs.reviewdeps.result.licenses.denied.length > 0) {
+              if (review.licenses?.denied?.length > 0) {
                 labels.push('license-issue');
               }
             } else {
@@ -110,7 +115,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              labels: labels
+              labels
             });
 
   notify:
@@ -121,7 +126,7 @@ jobs:
     steps:
       - name: 🔔 Notify on Failure
         if: needs.dependency-review.result == 'failure'
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+        uses: actions/github-script@v7.0.1
         with:
           script: |
             const message = `❌ Dependency review failed. Please check the [workflow logs](${context.payload.repository.html_url}/actions/runs/${context.runId}) for details.`;
