--- a/.github/workflows/reuse-check.yml
+++ b/.github/workflows/reuse-check.yml
@@ -102,11 +102,15 @@ jobs:
         id: check
         run: |
           # Run initial check
+          # Run REUSE lint and capture the output
           reuse lint > reuse-report.txt || true
 
           # Process results
           if grep -q "not compliant" reuse-report.txt; then
+            # Count files with licensing issues
             ISSUES=$(grep -c "not licensed" reuse-report.txt)
+
+            # Update GitHub environment variables
             {
               echo "status=failed"
               echo "issues=$ISSUES"
@@ -114,32 +118,37 @@ jobs:
               echo "issues-found=$ISSUES"
             } >> "$GITHUB_ENV"
 
-            # Generate detailed report
+            # Generate a detailed compliance report
             {
               echo "## 📋 License Compliance Issues"
               echo ""
               echo "Found $ISSUES files with licensing issues:"
-              echo " "
-              echo "```"
+              echo ""
+              echo "..."
               cat reuse-report.txt
-              echo "```"
+              echo "..."
               echo ""
               echo "### 🔨 How to Fix"
-              echo "1. Add SPDX headers to each file"
-              echo "2. Use appropriate license identifiers"
-              echo "3. Update dep5 file if needed"
+              echo "1. Add SPDX headers to each file."
+              echo "2. Use appropriate license identifiers."
+              echo "3. Update the dep5 file if needed."
             } > compliance-report.md
           else
+            # Update GitHub environment variables
             {
               echo "status=passed"
               echo "compliance-status=success"
               echo "issues-found=0"
             } >> "$GITHUB_ENV"
 
-
-            echo "## ✅ License Compliance Check Passed" > compliance-report.md
-            { echo "" echo ""; echo "All files comply with REUSE specifications."; } >> compliance-report.md
+            # Generate a success report
+            {
+              echo "## ✅ License Compliance Check Passed"
+              echo ""
+              echo "All files comply with REUSE specifications."
+            } > compliance-report.md
           fi
+
 
       - name: 📤 Upload Report
         if: always()
