--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,7 @@ repos:
     hooks:
       - id: commitlint
         stages: [commit-msg]
-        additional_dependencies: ['@commitlint/config-angular']
+        additional_dependencies: ["@commitlint/config-angular"]
 
   - repo: https://github.com/psf/black
     rev: 24.10.0
@@ -103,7 +103,7 @@ repos:
     hooks:
       - id: bandit
         args: [-c, pyproject.toml]
-        additional_dependencies: ['bandit[toml]']
+        additional_dependencies: ["bandit[toml]"]
 
   - repo: https://github.com/pypa/pip-audit
     rev: v2.7.3
