--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -3,12 +3,84 @@
 # SPDX-FileCopyrightText: 2023 - 2024 Jürgen Mülbert
 # yaml-language-server: $schema=https://json.schemastore.org/prettierrc.json
 # Prettier configuration file
-{
-  'printWidth': 100,
-  'semi': true,
-  'singleQuote': true,
-  'tabWidth': 2,
-  'trailingComma': none,
-  'useTabs': true,
-  'overrides': []
-}
+
+# SPDX-License-Identifier: BSD-3-Clause
+# Prettier configuration file
+$schema: https://json.schemastore.org/prettierrc.json
+
+# General Prettier settings
+printWidth: 80 # Aligns with yamllint and markdownlint defaults
+tabWidth: 2 # Matches yamllint, editorconfig, and markdownlint defaults
+useTabs: false # Spaces are preferred
+semi: true # Use semicolons in applicable languages (e.g., JavaScript)
+singleQuote: true # Use single quotes in JS and TS
+quoteProps: as-needed
+trailingComma: none # Avoid trailing commas for cleaner diffs
+bracketSpacing: true
+arrowParens: always
+proseWrap: preserve # For Markdown: Avoid wrapping to allow manual control
+htmlWhitespaceSensitivity: css
+endOfLine: lf # Unix-style line endings for cross-platform compatibility
+
+# Overrides for specific file types
+overrides:
+  # Markdown files
+  - files: "*.md"
+    options:
+      proseWrap: always # Enforce wrapping for Markdown readability
+      printWidth: 80
+      tabWidth: 2
+
+  # YAML files
+  - files: "*.yaml"
+    options:
+      tabWidth: 2
+      singleQuote: false # YAML prefers double quotes for compatibility
+
+  # JSON files
+  - files: "*.json"
+    options:
+      tabWidth: 2
+      printWidth: 80
+      trailingComma: none
+
+  # HTML files
+  - files: "*.html"
+    options:
+      tabWidth: 2
+      printWidth: 80
+
+  # JavaScript/TypeScript files
+  - files: ["*.js", "*.jsx", "*.ts", "*.tsx"]
+    options:
+      tabWidth: 2
+      singleQuote: true
+      trailingComma: all
+
+  # Python files (Prettier support via plugins)
+  - files: "*.py"
+    options:
+      tabWidth: 4
+
+  # C and C++ files
+  - files: ["*.c", "*.cpp", "*.h", "*.hpp"]
+    options:
+      tabWidth: 4
+      useTabs: false
+
+  # Swift files
+  - files: "*.swift"
+    options:
+      tabWidth: 4
+      trailingComma: none
+
+  # Qt files
+  - files: ["*.ui", "*.qss", "*.qrc"]
+    options:
+      tabWidth: 2
+
+  # PowerShell files
+  - files: ["*.ps1", "*.psm1"]
+    options:
+      tabWidth: 2
+      printWidth: 100
