--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,53 +1,78 @@
----
+# SPDX-License-Identifier: BSD-3-Clause
+# yamllint configuration file
 extends: default
 
+# Ignore specific directories and files
 ignore:
   - .cache/
   - .direnv/
   - .flatpak/
-  - .flatpak/builder/ # Ensure this is treated as a directory
+  - .flatpak/builder/
   - build*/
   - repo/
-  - .github/linters/valestyles/
+  - node_modules/
+  - .github/linters/valestyles/Microsoft/
+  - .github/linters/valestyles/proselint/
   - pnpm-lock.yaml
+  - package-lock.json
 
 rules:
-  braces:
-    max-spaces-inside: 1
-
-  comments:
-    min-spaces-from-content: 1 # Used to follow prettier standard: https://github.com/prettier/prettier/pull/10926
-
-  line-length: disable
-
-  indentation:
-    spaces: 2 # Use 2 spaces for indentation
-    level: error # Set level to error
-
-  key-duplicates:
-    level: error # Disallow duplicate keys
-
-  new-lines:
+  # Formatting rules
+  line-length:
+    max: 80 # Matches Prettier's printWidth for YAML
     level: warning
-    type: unix
-
-  truthy:
-    level: warning # Warn about truthy values (e.g., "yes", "no", "on", "off")
-
+  indentation:
+    spaces: 2 # Consistent with editorconfig and Prettier
+    level: error
   trailing-spaces:
     level: error # Disallow trailing spaces
-
   empty-lines:
-    max: 1 # Allow a maximum of 1 empty line
-    level: warning # Set level to warning
+    max: 2 # Allow up to 2 empty lines for readability
+    level: warning
+  new-lines:
+    type: unix # Enforce LF endings to align with editorconfig and Prettier
+    level: error
 
+  # Quotation rules
   quoted-strings:
-    required: only-when-needed # Require quotes only when necessary
-    extra-allowed: ['{|}'] # Allow block style strings
-    level: warning # Set level to warning
+    required: only-when-needed # Avoid unnecessary quoting
+    extra-allowed: ['{|}', '|']
+    level: warning
 
+  # Key and value rules
+  key-duplicates:
+    level: error # Prevent duplicate keys
+  colons:
+    max-spaces-before: 0
+    max-spaces-after: 1
+    level: error
+  commas:
+    max-spaces-before: 0
+    min-spaces-after: 1
+    level: error
+
+  # Block formatting
+  braces:
+    max-spaces-inside: 1 # Ensure clean formatting
+    level: error
+  hyphens:
+    max-spaces-after: 1 # Space after list indicators
+    level: error
+
+  # Document structure
+  document-start:
+    present: true # Enforce document start `---`
+    level: warning
+  document-end:
+    present: false # Do not require document end `...`
+    level: warning
+
+  # Advanced rules
   octal-values:
-    forbid-implicit-octal: true # Forbid implicit octal values
-
-
-    # Additional rules can be added here
+    forbid-implicit-octal: true
+    level: error
+  comments:
+    min-spaces-from-content: 1 # Prettier-compliant spacing
+    level: warning
+  truthy:
+    level: warning # Warn about non-boolean values for better YAML compatibility
