--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -47,6 +47,7 @@ jobs:
       id-token: write
       contents: read
       actions: read
+      issues: write
 
     outputs:
       score: ${{ steps.scorecard.outputs.overall-score }}
