--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -51,11 +51,7 @@ jobs:
         with:
           comment-summary-in-pr: always
           fail-on-severity: moderate
-          deny-licenses: |
-            LGPL-2.0
-            BSD-2-Clause
-            AGPL-1.0
-            AGPL-3.0
+          deny-licenses: LGPL-2.0, BSD-2-Clause, AGPL-1.0, AGPL-3.0
           retry-on-snapshot-warnings: true
           base-ref: ${{ github.event.pull_request.base.ref }}
           head-ref: ${{ github.event.pull_request.head.ref }}
