--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -59,16 +59,14 @@ jobs:
         if: always()
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
-          
+
           script: |
             const conclusion = '${{ job.status }}';
             const message = conclusion === 'success'
               ? '✅ All commit messages follow the conventional commits standard.'
               : '❌ Some commit messages do not follow the conventional commits standard.';
-
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
+              issue_number: context.payload.pull_request.number, // Use pull_request.number
               body: message
-            });
