--- a/.github/workflows/misspell-fixer.yml
+++ b/.github/workflows/misspell-fixer.yml
@@ -73,12 +73,15 @@ jobs:
           version: 9.15.3
           run_install: false
 
-      - name: 🔍 Install Node and pnpm
+      - name: 🔍 Install Node
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
         with:
           node-version: 20
           check-latest: true
           cache: 'pnpm'
+
+      - name: 🔍 Install Node Packages
+        run: pnpm install
 
       - name: 📋 Check Spelling
         id: spell-check
