--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: EUPL-1.2
-# SPDX-FileCopyrightText: 2023-2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
+# SPDX-FileCopyrightText: 2023-present Jürgen Mülbert <juergen.muelbert@outlook.de>
 #
 # Top-most EditorConfig file
 root = true
@@ -41,7 +41,7 @@ indent_style = space
 max_line_length = 100
 
 # Markdown files (Prettier proseWrap settings)
-[*.md]
+[*.{md,mdx,adoc}]
 indent_size = 2
 trim_trailing_whitespace = false
 max_line_length = 80 # Matches Prettier's proseWrap default
@@ -50,6 +50,10 @@ max_line_length = 80 # Matches Prettier's proseWrap default
 [*.{yml,yaml,toml}]
 indent_size = 2
 max_line_length = 80
+
+[*.xml]
+indent_style = space
+indent_size = 4
 
 # HTML files
 [*.html]
@@ -61,13 +65,14 @@ max_line_length = 80
 indent_size = 2
 max_line_length = 80
 
-# PowerShell scripts
-[*.{ps1,psm1}]
-indent_size = 2
-max_line_length = 100
-
 # Shell scripts
 [*.{sh,bash,zsh}]
+indent_size = 2
+
+# Windows Shell
+[*.{bat,cmd,ps1,psm1}]
+end_of_line = crlf
+indent_style = space
 indent_size = 2
 
 # Docker files
@@ -78,8 +83,4 @@ indent_size = 2
 [{package.json,package-lock.json}]
 indent_size = 2
 
-# Batch files (Windows)
-[*.{cmd,bat}]
-end_of_line = crlf
-indent_style = space
-indent_size = 2
+
