--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,4 +1,8 @@
 ---
+# SPDX-License-Identifier: EUPL-1.2
+# SPDX-FileCopyrightText: 2023-present Jürgen Mülbert <juergen.muelbert@outlook.de>
+#
+#
 # Configuration file for MegaLinter
 #
 # See all available variables at https://megalinter.io/latest/config-file/ and in
@@ -6,43 +10,70 @@
 
 # all, none, or list of linter keys
 APPLY_FIXES: all
-
-# If you use ENABLE variable, all other languages/formats/tooling-formats will
-# be disabled by default
-# ENABLE:
-
-# If you use ENABLE_LINTERS variable, all other linters will be disabled by
-# default
-# ENABLE_LINTERS:
-
-# DISABLE:
-# - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
-# - SPELL # Uncomment to disable checks of spelling mistake
-#  - REPOSITORY_DEVSKIM
-
-SHOW_ELAPSED_TIME: true
-
-FILEIO_REPORTER: false
-# Uncomment if you want MegaLinter to detect errors but not block CI to pass
-# DISABLE_ERRORS: true
-
-# EditorConfig
-EDITORCONFIG_FILTER_REGEX_EXCLUDE: (LICENSES/|LICENSE|license\.md)
-
+# ENABLE: # If you use ENABLE variable, all other languages/formats/tooling formats will be disabled by default
+# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
+DISABLE:
+  - CLOUDFORMATION
+  # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
+  # - CSS
+  - EDITORCONFIG
+  # - SPELL # Uncomment to disable checks of spelling mistakes
+  # - JAVASCRIPT
+  - TEKTON
+DISABLE_LINTERS:
+  # - JSON_PRETTIER
+  # - MARKDOWN_MARKDOWN_LINK_CHECK
+  - PYTHON_PYRIGHT
+  # - REPOSITORY_GITLEAKS
+  # - REPOSITORY_KICS
+  # - SPELL_PROSELINT
+  # - SPELL_MISSPELL
+  # - SPELL_VALE
+DISABLE_ERRORS_LINTERS:
+  # - PYTHON_BANDIT
+  - REPOSITORY_DEVSKIM
+  - REPOSITORY_GRYPE
+  - REPOSITORY_SEMGREP
+  - REPOSITORY_TRUFFLEHOG
+  - SPELL_LYCHEE
+PRINT_ALL_FILES: false
+FILTER_REGEX_EXCLUDE: '(\.automation/test|\.automation/generated|\.venv|ocs/overridesflavors|clj-kondo|TEMPLATES)'
 # JSON-Linter
 JSON_JSONLINT_FILTER_REGEX_EXCLUDE: (\.vscode/|\.devcontainer/devcontainer.json)
 JSON_V8R_FILTER_REGEX_EXCLUDE: (\.devskim.json|\.secretlintrc.json|\.devcontainer/devcontainer.json|\.vscode/|\.github/linters/valestyles/)
-
-# Markdown
-MARKDOWN_FILTER_REGEX_EXCLUDE: (LICENSES/|LICENSE|license\.md)
-
-# TYPESCRIPT
-TYPESCRIPT_FILTER_REGEX_EXCLUDE: (assets/translations)
-
 # YAML
 YAML_FILTER_REGEX_EXCLUDE: (\.github/linters/valestyles/)
-YAML_V8R_FILTER_REGEX_EXCLUDE: (\.hound.yml|\.goodcheck.yml|\.grype.yaml|\.github/invite-contributors.yml|\.checkov.yml|\.devcontainer/docker-compose.yml|\.github/dependency-review-config.yml|\.github/release-drafter.yml|\.github/linters/valestyles/)
-
+YAML_V8R_FILTER_REGEX_EXCLUDE: (\.hound\.yml|\.goodcheck\.yml|\.grype\.yaml|\.github/invite-contributors\.yml|\.checkov\.yml|\.devcontainer/docker-compose\.yml|\.github/dependency-review-config\.yml|\.github/release-drafter\.yml|\.github/linters/valestyles/)
+# BASH
+BASH_FILTER_REGEX_EXCLUDE: "(lib)"
+# Markdown
+MARKDOWN_FILTER_REGEX_EXCLUDE: (LICENSES/|LICENSE|license\.md)
+# MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
+# SPELL
+SPELL_VALE_FILE_EXTENSIONS:
+  - .md
+SPELL_FILTER_REGEX_EXCLUDE: (valestyles|\.github|docs/licenses)
+# DOCKER
+DOCKERFILE_HADOLINT_ARGUMENTS: "--ignore DL3003 --ignore DL3007 --ignore DL3013 --ignore DL3016 --ignore DL3018 --ignore DL3028 --ignore DL3059 --ignore DL4001 --ignore DL4006 --ignore SC2015 --ignore SC2016 --ignore SC2039 --ignore SC2086 --ignore SC1091 --ignore SC3046"
+# TRIVY
+REPOSITORY_TRIVY_ARGUMENTS:
+  - "--skip-dirs"
+  - ".automation/test"
+  - "--skip-dirs"
+  - ".venv"
+# EditorConfig
+EDITORCONFIG_FILTER_REGEX_EXCLUDE: (LICENSES/|LICENSE|license\.md)
+# TYPESCRIPT
+TYPESCRIPT_FILTER_REGEX_EXCLUDE: (assets/translations)
+# GENERAL
+SHOW_ELAPSED_TIME: true
+FLAVOR_SUGGESTIONS: true
+EMAIL_REPORTER: false
+FILEIO_REPORTER: false
+JSON_REPORTER: true
+GITHUB_STATUS_REPORTER: false
+PLUGINS:
+  - https://raw.githubusercontent.com/oxsecurity/megalinter/main/.automation/test/
 # Run npm install before linting
 PRE_COMMAND: |
   echo "Installing dependencies from package.json..."
