--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,6 +1,6 @@
 ---
 # SPDX-License-Identifier: BSD-3-Clause
-# SPDX-FileCopyrightText: 2023 - 2024 Jürgen Mülbert
+# SPDX-FileCopyrightText: 2023 - present Jürgen Mülbert
 # yaml-language-server: $schema=https://json.schemastore.org/prettierrc.json
 # Prettier configuration file
 
