--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
-# SPDX-FileCopyRightText: 2023-2024 Jürgen Mülbert <juergen.muelbert@web.de>
-#
 # SPDX-License-Identifier: EUPL-1.2
+# SPDX-FileCopyrightText: 2023-present Jürgen Mülbert <juergen.muelbert@outlook.de>
+#
 #
 # Python configuration file for building, dependencies, and tooling.
 #
 # For more information, visit
 # https://snarky.ca/what-the-heck-is-pyproject-toml/.
 
+# --- build-system -----------------------------------------------------------
+# ref: https://packaging.python.org/en/latest/tutorials/packaging-projects/
+# these should match the "setup-requires" packages in `setup.cfg`
 [build-system]
 requires = ["hatchling>=1.18.0"]
 build-backend = "hatchling.build"
@@ -88,6 +91,7 @@ include = ["/src", "/tests", "/CHANGELOG.md", "/README.md", "/LICENSE"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/jmbde"]
+macos-max-compat = true
 
 [tool.hatch.envs.default]
 installer = "uv"
@@ -196,9 +200,17 @@ exclude_dirs = ["tests"]
 targets = ["src"]
 
 [tool.black]
-include = "\\.pyi?$"
-line-length = 88
 target-version = ['py311']
+line-length = 88
+include = '\.pyi?$|\.ipynb$'
+extend-exclude = '''
+# # A regex preceded with ^/ will apply only to files and directories
+# # in the root of the project.
+# ^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
+\.ipynb_checkpoints$|^/\.env|^/\.git|^/\.nox|^/\.pytest_cache|^/\.tox
+'''
+
+
 
 [tool.isort]
 profile = "black"
@@ -229,6 +241,28 @@ ignore = [
 [tool.ruff.per-file-ignores]
 "tests/**/*.py" = ["S101", "FBT", "INP001", "D", "S603", "PLR2004"]
 "*.py" = ["Q000"] # Example: Ignore specific PyQt warnings
+
+# --- ruff plugins --------------------
+[tool.ruff.flake8-bugbear]
+extend-immutable-calls = [
+"chr",
+"typer.Argument",
+"typer.Option",
+]
+[tool.ruff.isort]
+combine-as-imports = true
+# extra-standard-library = ["path"]
+forced-separate = ["scipy", "sklearn", "statsmodels", "ds_utils", "src"]
+force-sort-within-sections = true
+force-wrap-aliases = true
+known-first-party = ["ds_utils", "src"]
+# known-local-folder = ["src"] # for relative imports
+[tool.ruff.mccabe]
+max-complexity = 18
+[tool.ruff.pep8-naming]
+ignore-names = []
+[tool.ruff.pydocstyle]
+convention = "numpy"
 
 [tool.mypy]
 python_version = "3.11"
